fix styling and make image grid on small screens 2 images wide

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -56,7 +56,7 @@
   background-color: #f0f0f0;
   padding: 0 !important;
   min-height: 100vh;
-  padding-top: 60px !important; /* height of the navbar */
+  padding-top: 72px !important; /* height of the navbar */
 }
 .brand {
   position: absolute;
