--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -27,8 +27,12 @@
 }
 @media screen and (max-width: 767px) {
   .grid-item {
-    width: 90%;
+    width: 46%;
     margin-bottom: 2%;
+  }
+  .grid {
+    padding-left: 3%;
+    padding-right: 3%;
   }
   .gutter {
     width: 2%;
@@ -36,12 +40,12 @@
 }
 @media screen and (min-width: 768px) and (max-width: 991px){
   .grid-item {
-    width: 48%;
+    width: 46%;
     margin-bottom: 2%;
   }
   .grid {
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    padding-left: 2.75%;
+    padding-right: 2.75%;
   }
   .gutter {
     width: 2%;
@@ -49,8 +53,8 @@
 }
 @media screen and (min-width: 992px) {
   .grid {
-    padding-left: 3.667%;
-    padding-right: 3.667%;
+    padding-left: 3.666667%;
+    padding-right: 3.666667%;
   }
   .grid-item {
     width: 30%;
